<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/website_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/text_web" />

        <Button
            android:id="@+id/website_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:backgroundTint="@color/gray"
            android:onClick="openWebsite"
            android:text="@string/button_web"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/map_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/text_map" />

        <Button
            android:id="@+id/map_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:backgroundTint="@color/gray"
            android:onClick="openMap"
            android:text="@string/button_map"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/share_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/text_share" />

        <Button
            android:id="@+id/share_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:backgroundTint="@color/gray"
            android:onClick="shareText"
            android:text="@string/button_share"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/camera_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/gray"
            android:onClick="takePic"
            android:text="@string/button_camera"
            android:textColor="@color/black" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>